--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,18 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "@styled-icons/evaicons-outline": "^10.34.0",
+    "@styled-icons/heroicons-solid": "^10.36.0",
     "axios": "^0.27.2",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-query": "^3.39.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "styled-icons": "^10.45.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
