--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,17 +1,22 @@
 {
   "env": {
-    "browser": true,
-    "es2021": true
+      "browser": true,
+      "es2021": true
   },
-  "extends": ["plugin:react/recommended", "airbnb"],
+  "extends": [
+      "plugin:react/recommended",
+      "airbnb"
+  ],
   "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": "latest",
-    "sourceType": "module"
+      "ecmaFeatures": {
+          "jsx": true
+      },
+      "ecmaVersion": "latest",
+      "sourceType": "module"
   },
-  "plugins": ["react"],
+  "plugins": [
+      "react"
+  ],
   "rules": {
     "quotes": ["error", "double"]
   }
