--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@reduxjs/toolkit": "^1.8.1",
     "@styled-icons/evaicons-outline": "^10.34.0",
+    "@styled-icons/evil": "^10.34.0",
     "@styled-icons/heroicons-solid": "^10.36.0",
     "axios": "^0.27.2",
     "prop-types": "^15.8.1",
